source/objects/Entitlement_Template__c/Entitlement_Template__c.object-meta.xml
<CustomObject>
    <label>Entitlement Template</label>
    <nameField>
        <label>Entitlement Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlement Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>