source/objects/Entitlement_Template__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Entitlement Period</description>
    <inlineHelpText>Period of the Entitlement in Months</inlineHelpText>
    <label>Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>