source/objects/Entitlement_Template__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entitlement Templates</relationshipLabel>
    <relationshipName>Entitlement_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>