source/objects/Entitlement_Template__c/fields/Quantity_Flag__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Flag__c</fullName>
    <label>Quantity Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>