source/objects/Entitlement_Template__c/fields/Use_Template_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Use_Template_Quantity__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use Template Quantity for Entitlement Quantity</description>
    <inlineHelpText>Use Template Quantity for Entitlement Quantity</inlineHelpText>
    <label>Use Template Quantity</label>
    <type>Checkbox</type>
</CustomField>