source/objects/Entitlement_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product__c</columns>
    <columns>Entitlement_Type__c</columns>
    <columns>Use_Template_Quantity__c</columns>
    <columns>Quantity__c</columns>
    <columns>Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>